<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ut_bg"
    android:configChanges="orientation|keyboardHidden"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:windowSoftInputMode="adjustUnspecified|stateHidden"
    tools:context=".UnvarnishedTransmissionActivity" >
    
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal" >

	    <TextView
	        android:id="@+id/t1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:layout_marginLeft="8dp"
	        android:text="@string/bearing_stat"
	          />

	    <ImageView 
	        android:id="@+id/icon"
	        android:layout_width="40dp"
	        android:layout_height="40dp"
	        
	        />
		<TextView 
		    android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:text=" "
	        android:layout_weight="1"
	          />
		
	    <Button 
	        android:id="@+id/readData"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true"
	         
	        android:text="@string/read"
	        />
	        
	    <Button
	        android:id="@+id/btnTx"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:layout_alignParentRight="true"
	        />
    
    </LinearLayout>
    <LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="0dip"
		android:layout_weight="1"
		android:orientation="horizontal">

	    <TextView
	        android:id="@+id/t2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:layout_marginLeft="8dp"
	        android:text="@string/displacement"
	        tools:ignore="ObsoleteLayoutParam" />

	    <EditText
	        android:id="@+id/displacement"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	    	android:editable="false"
        	android:background="@android:drawable/edit_text"
	        android:text=" "
	        android:layout_weight="2.0"
	        android:layout_centerVertical="true"
	          
	        android:singleLine="true"
	        />

	     <TextView
	         android:id="@+id/disStatus"
	         android:layout_width="10dp"
	         android:layout_height="45dp"
	         android:layout_alignParentLeft="true"
	         android:layout_centerVertical="true"
	         android:layout_gravity="fill"
	         android:layout_marginLeft="0dp"
	         android:layout_marginRight="0dp"
	         android:background="@color/white"
	         android:text="  "
	           />

	    <TextView
	        android:id="@+id/t3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:layout_marginLeft="8dp"
	        android:layout_marginRight="8dp"
	        android:text="μm     "
	        android:layout_weight="0.3"
	         />
	    <Button 
	        android:id="@+id/disMeas"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true"
	         
	        />
    </LinearLayout>
    <LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="0dip"
		android:layout_weight="1"
		android:orientation="horizontal">
	    <TextView
	        android:id="@+id/t4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:layout_marginLeft="8dp"
	        android:text="@string/acceleration"
	          
	        />
	    <EditText
	        android:id="@+id/acc"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	    	android:editable="false"
        	android:background="@android:drawable/edit_text"
	        android:text=" "
	        android:layout_weight="2.0"
	        android:layout_centerVertical="true"
	          
	        android:singleLine="true"
	        />

	    <TextView
	        android:id="@+id/accStatus"
	        android:layout_width="10dp"
	        android:layout_height="45dp"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:layout_gravity="fill"
	        android:layout_marginLeft="0dp"
	        android:layout_marginRight="0dp"
	        android:background="@color/white"
	        android:text="  "
	          />

	    <TextView
	        android:id="@+id/t5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:layout_marginLeft="8dp"
	        android:layout_marginRight="8dp"
	        android:text="m/s^2"
	        android:layout_weight="0.3"
	         />
	    <Button 
	        android:id="@+id/accMeas"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true"
	         
	        />
    </LinearLayout>
    <LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="0dip"
		android:layout_weight="1"
		android:orientation="horizontal">
	    <TextView
	        android:id="@+id/t6"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:layout_marginLeft="8dp"
	        android:text="@string/velocity"
	          
	        />
	    <EditText
	        android:id="@+id/velocity"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	    	android:editable="false"
        	android:background="@android:drawable/edit_text"
	        android:text=" "
	        android:layout_weight="2.0"
	        android:layout_centerVertical="true"
	          
	        android:singleLine="true"
	        />

	    <TextView
	        android:id="@+id/velStatus"
	        android:layout_width="10dp"
	        android:layout_height="45dp"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:layout_gravity="fill"
	        android:layout_marginLeft="0dp"
	        android:layout_marginRight="0dp"
	        android:background="@color/white"
	        android:text="  "
	          />

	    <TextView
	        android:id="@+id/t7"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:layout_marginLeft="8dp"
	        android:layout_marginRight="8dp"
	        android:text="mm/s"
	        android:layout_weight="0.3"
	         />
	    <Button 
	        android:id="@+id/velMeas"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true"
	         
	        />
    </LinearLayout>
    <LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="0dip"
		android:layout_weight="1"
		android:orientation="horizontal">
	    <TextView
	        android:id="@+id/t8"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:layout_marginLeft="8dp"
	        android:text="@string/envelope"
	          
	        />

	    <EditText
	        android:id="@+id/envelope"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_marginTop="0dp"
	        android:layout_weight="2.0"
	        android:background="@android:drawable/edit_text"
	        android:editable="false"
	        android:singleLine="true"
	        android:text=" "
	          />

	    <TextView
	        android:id="@+id/envStatus"
	        android:layout_width="10dp"
	        android:layout_height="45dp"
	        android:layout_gravity="fill"
	        android:layout_marginLeft="0dp"
	        android:layout_marginRight="0dp"
	        android:layout_marginTop="2dp"
	        android:background="@color/white"
	        android:text="  "
	          />

	    <TextView
	        android:id="@+id/t9"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:layout_marginLeft="8dp"
	        android:layout_marginRight="8dp"
	        android:text="m/s^2"
	        android:layout_weight="0.3"
	         />
	    <Button 
	        android:id="@+id/envMeas"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true"
	         
	        />
    </LinearLayout>

    
	<TextView
	        android:id="@+id/t10"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:layout_marginLeft="8dp"
	        android:layout_marginRight="8dp"
	        android:text="@string/device_choose"
	         />
     
	    <Spinner 
         android:id="@+id/DeviceType"
         android:drawSelectorOnTop="true"
         android:prompt="@string/device_choose"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
        
         />
	    
     <TextView
	        android:id="@+id/t11"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:layout_marginLeft="8dp"
	        android:layout_marginRight="8dp"
	        android:text="@string/bearing_choose"
	         />
      <Spinner 
         android:id="@+id/BearingType"
         android:drawSelectorOnTop="true"
         android:prompt="@string/bearing_choose"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         />
    
    <LinearLayout android:id="@+id/chart" android:orientation="horizontal"
                  android:layout_width="fill_parent" android:layout_height="0dip" android:layout_weight="4"/>
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal" >
	 <Spinner 
         android:id="@+id/dataType"
         android:drawSelectorOnTop="true"
         android:prompt="@string/bearing_choose"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         />
     <TextView
	        android:id="@+id/t12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/max"
          />
     <EditText
	        android:id="@+id/max"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	    	android:editable="false"
        	android:background="@android:drawable/edit_text"
	        android:text=" "
	        android:layout_weight="1.0"
	        android:layout_centerVertical="true"
	          
	        android:singleLine="true"/>
     <TextView
	        android:id="@+id/t13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/min"
          />
     <EditText
	        android:id="@+id/min"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	    	android:editable="false"
        	android:background="@android:drawable/edit_text"
	        android:text=" "
	        android:layout_weight="1.0"
	        android:layout_centerVertical="true"
	          
	        android:singleLine="true"/>
     <TextView
	        android:id="@+id/t14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/avg"
          />
     <EditText
	        android:id="@+id/avg"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	    	android:editable="false"
        	android:background="@android:drawable/edit_text"
	        android:text=" "
	        android:layout_weight="1.0"
	        android:layout_centerVertical="true"
	        android:singleLine="true"/>
     </LinearLayout>
	<TextView
        android:id="@+id/tvGattStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="No connected device"
        android:textColor="#003399"
        android:textSize="20dp" />
</LinearLayout>
